<resources>
    <string name="app_name">Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="parentheses">()</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="doubleZero">00</string>
    <string name="point">.</string>
    <string name="equals">=</string>

    <string name="backspace"> </string>

    <string name="display">Enter in a value</string>
    <string name="empty"></string>


    <string name="divideSlash">/</string>
    <string name="multiplyAsterix">*</string>

    <string name="info">Informacion</string>
    <string name="infoText">
        Autora: Sara Perez Garcia\n
        Curso: DAMV2\n
        Instituto: IES Islas Filipinas\n
    </string>
    <string name="exit">Salir</string>
</resources>